--- a/merchandise.html
+++ b/merchandise.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merchandise - Bus Army Dude's Profile</title>
-    
+
     <!-- Link CSS files -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="merchandise.css">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="settings.css">
     
     <!-- Content-Security-Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.googletagmanager.com; connect-src 'self' https://storefront-api.fourthwall.com; img-src 'self' data: https://your-image-source.com; style-src 'self' 'unsafe-inline';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://storefront-api.fourthwall.com; img-src 'self' data: https://your-image-source.com; style-src 'self' 'unsafe-inline';">
 
     <!-- Favicons and Icons -->
     <link rel="icon" href="images/favicon-32x32.png" type="image/png" />
