--- a/merchandise.html
+++ b/merchandise.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="merchandise.css">
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
-    
-    <!-- Content-Security-Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://storefront-api.fourthwall.com; img-src 'self' data: https://your-image-source.com; style-src 'self' 'unsafe-inline';">
+
+    <!-- Content-Security-Policy with 'unsafe-eval' -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://storefront-api.fourthwall.com; img-src 'self' data: https://your-image-source.com; style-src 'self' 'unsafe-inline';">
 
     <!-- Favicons and Icons -->
     <link rel="icon" href="images/favicon-32x32.png" type="image/png" />
