--- a/merchandise.html
+++ b/merchandise.html
@@ -5,30 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merchandise - Bus Army Dude's Profile</title>
 
-    <!-- Link CSS files -->
+    <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="merchandise.css">
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
-
-    <!-- Content-Security-Policy with 'unsafe-eval' -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://storefront-api.fourthwall.com; img-src 'self' data: https://your-image-source.com; style-src 'self' 'unsafe-inline';">
-
-    <!-- Favicons and Icons -->
-    <link rel="icon" href="images/favicon-32x32.png" type="image/png" />
+    <meta http-equiv="refresh" content="300">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
 </head>
 <body>
     <header>
         <div class="header-content">
             <h1>Bus Army Dude's Merchandise</h1>
-            <button class="home-button" onclick="window.location.href='index.html'">Home</button>
+            <button class="home-button" onclick="window.location.href='index.html';">Home</button>
         </div>
     </header>
 
     <!-- Navigation for categories -->
     <nav>
         <ul id="category-nav">
-            <!-- Categories will be populated here dynamically -->
+            <!-- Categories will be dynamically populated here -->
         </ul>
     </nav>
 
@@ -42,12 +38,12 @@
         <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
-    <!-- Include the JavaScript that controls the page -->
+    <!-- Include external JavaScript that controls the page -->
     <script src="merchandise.js"></script>
     <script src="common.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
-    <script src="analytics.js"></script> <!-- External Google Analytics script -->
+    <script src="analytics.js"></script> <!-- Link to Google Analytics -->
 </body>
 </html>
