--- a/index.html
+++ b/index.html
@@ -662,9 +662,7 @@
             <div class="version-header">Version Information</div>
             <div class="version-number">v1.12.0</div>
             <div class="build-number">2025.2.11</div>
-            <div class="os-info">
-            <!-- The label is added automatically by the CSS (no need to add it here) -->
-                <span class="os-value" id="os"></span>            
+            <p class="os-info">Detecting Operating System...</p>
             <div class="update-time">2025-01-27 21:29:16</div>
             <div class="countdown">5 minutes</div>
         </div>
