--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
             <div class="version-header">Version Information</div>
             <div class="version-number">v1.12.0</div>
             <div class="build-number">2025.2.11</div>
-            <p class="os-info">Detecting Operating System...</p>
+            <div class="os-info" id="os">Detecting Operating System...</div>
             <div class="update-time">2025-01-27 21:29:16</div>
             <div class="countdown">5 minutes</div>
         </div>
