--- a/index.html
+++ b/index.html
@@ -657,15 +657,18 @@
     </div>
     
     <!-- Version Panel Section -->
-    <div class="version-info-container">
-        <div class="version-info-section">
-            <div class="version-header">Version Information</div>
-            <div class="version-number">v1.12.0</div>
-            <div class="build-number">2025.2.11</div>
-            <div class="update-time">2025-01-27 21:29:16</div>
-            <div class="countdown">5 minutes</div>
-        </div>
+<div class="version-info-container">
+    <div class="version-info-section">
+        <div class="version-header">Version Information</div>
+        <div class="version-number">v1.12.0</div>
+        <div class="build-number">2025.2.11</div>
+        <div class="update-time">2025-01-27 21:29:16</div>
+        <div class="countdown">5 minutes</div>
+        <div class="user-os">Operating System: <span id="os-info">Detecting...</span></div>
+        <div class="device-model">Device Model: <span id="device-info">Detecting...</span></div>
     </div>
+</div>
+
     
    <!-- The back to top button should be placed just before the notice-container div -->
     <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
