--- a/index.html
+++ b/index.html
@@ -697,6 +697,7 @@
     <script src="settings.js"></script>
     <script src="events.js"></script>
     <script src="version.js"></script>
+    <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
 </body>
 </html>                
