--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <meta http-equiv="refresh" content="300">
 
     
@@ -80,48 +80,48 @@
         <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
     </div>
         
-        <!-- Social Links Section -->
+       <!-- Social Links Section -->
 <div class="social-links-section">
     <h2>Connect with Me</h2>
     <div class="social-links-container">
         <a href="https://www.tiktok.com/@officalbusarmydude" class="social-button">
-            <i class="fab fa-tiktok social-icon"></i>
+            <i class="fa fa-tiktok social-icon" aria-hidden="true"></i>
             <span>TikTok</span>
         </a>
         <a href="https://www.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fab fa-youtube social-icon"></i>
+            <i class="fa fa-youtube social-icon" aria-hidden="true"></i>
             <span>YouTube</span>
         </a>
         <a href="https://www.snapchat.com/add/riverkritzar" class="social-button">
-            <i class="fab fa-snapchat-ghost social-icon"></i>
+            <i class="fa fa-snapchat-ghost social-icon" aria-hidden="true"></i>
             <span>Snapchat</span>
         </a>
         <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="fab fa-x social-icon"></i>
+            <i class="fa fa-twitter social-icon" aria-hidden="true"></i>
             <span>X (Twitter)</span>
         </a>
         <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
-            <i class="fab fa-twitch social-icon"></i>
+            <i class="fa fa-twitch social-icon" aria-hidden="true"></i>
             <span>Twitch</span>
         </a>
         <a href="https://www.facebook.com/profile.php?id=61569972389004" class="social-button">
-            <i class="fab fa-facebook social-icon"></i>
+            <i class="fa fa-facebook social-icon" aria-hidden="true"></i>
             <span>Facebook</span>
         </a>
         <a href="https://steamcommunity.com/profiles/76561199283946668" class="social-button">
-            <i class="fab fa-steam social-icon"></i>
+            <i class="fa fa-steam social-icon" aria-hidden="true"></i>
             <span>Steam</span>
         </a>
         <a href="https://discord.gg/NjMtuZYc52" class="social-button">
-            <i class="fab fa-discord social-icon"></i>
+            <i class="fa fa-discord social-icon" aria-hidden="true"></i>
             <span>Discord</span>
         </a>
         <a href="https://www.instagram.com/busarmydude/" class="social-button">
-            <i class="fab fa-instagram social-icon"></i>
+            <i class="fa fa-instagram social-icon" aria-hidden="true"></i>
             <span>Instagram</span>
         </a>
         <a href="https://www.threads.net/@busarmydude" class="social-button">
-            <i class="fab fa-threads social-icon"></i>
+            <i class="fa fa-threads social-icon" aria-hidden="true"></i>
             <span>Threads</span>
         </a>
     </div>
