--- a/index.html
+++ b/index.html
@@ -682,22 +682,24 @@
    <!-- The back to top button should be placed just before the notice-container div -->
     <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
     
-    <div class="notice-container">
-        <div class="copy-protection-message">
-            This content is protected by a watermark. Unauthorized use is prohibited.
-        </div>
-        <div class="legal-protection-message">
-            All content and materials on this website are legally protected.
-        </div>
+ <div class="notice-container">
+    <div class="copy-protection-message">
+        This content is protected by a watermark. Unauthorized use is prohibited.
     </div>
+    <div class="legal-protection-message">
+        All content and materials on this website are legally protected.
+    </div>
+</div>
 
-    <!-- Watermark text -->
-    <div class="watermark">Protected by Watermark</div>
+<!-- Watermark text -->
+<div class="watermark">
+    Protected by Watermark
+</div>
 
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 Bus Army Dude. All Rights Reserved.</p>
-    </footer>
+<!-- Footer -->
+<footer>
+    <p>© 2025 Bus Army Dude. All Rights Reserved.</p>
+</footer>
 
     <!-- Scripts -->
     <script src="common.js"></script>
