--- a/settings.html
+++ b/settings.html
@@ -126,7 +126,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
+        <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
         <a href="privacy-policy.html" aria-label="Privacy Policy">Privacy Policy</a>
         <a href="terms-of-service.html" aria-label="Terms of Service">Terms of Service</a>
         <a href="accessibility-statement.html" aria-label="Accessibility Statement">Accessibility Statement</a>
