--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 
 <!-- Footer -->
 <footer>
-    <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
+    <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
 </footer>
 
     <!-- Scripts -->
