--- a/settings.html
+++ b/settings.html
@@ -64,6 +64,18 @@
                         <option value="larger">Larger</option>
                     </select>
                 </div>
+
+                <!-- Disable Focus Outline -->
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <h3 class="setting-title">Disable Focus Outline</h3>
+                        <p class="setting-description">Toggle the blue focus outline for accessibility purposes</p>
+                    </div>
+                    <label for="focusOutlineToggle" class="toggle-switch" aria-label="Toggle focus outline visibility">
+                        <input type="checkbox" id="focusOutlineToggle" aria-label="Disable focus outline">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
             </div>
 
             <!-- Owner Only Settings Section -->
@@ -113,13 +125,12 @@
     </div>
 
     <!-- Footer -->
-<footer>
-    <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
-    <a href="privacy-policy.html" aria-label="Privacy Policy">Privacy Policy</a>
-    <a href="terms-of-service.html" aria-label="Terms of Service">Terms of Service</a>
-    <a href="accessibility-statement.html" aria-label="Accessibility Statement">Accessibility Statement</a>
-</footer>
-
+    <footer>
+        <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
+        <a href="privacy-policy.html" aria-label="Privacy Policy">Privacy Policy</a>
+        <a href="terms-of-service.html" aria-label="Terms of Service">Terms of Service</a>
+        <a href="accessibility-statement.html" aria-label="Accessibility Statement">Accessibility Statement</a>
+    </footer>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent-banner" role="dialog" aria-labelledby="cookie-consent-banner-title" aria-describedby="cookie-consent-description">
