--- a/merchandise.html
+++ b/merchandise.html
@@ -44,7 +44,7 @@
     <div class="container">
         <div class="header">
             <div class="title">Merchandise</div>
-            <button class="home-button" onclick="window.location.href='/'">Return to Home</button>
+                <button class="home-button" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/index.html'">Return to Home</button>
         </div>
 
         <div class="categories-dropdown">
