--- a/merchandise.html
+++ b/merchandise.html
@@ -7,6 +7,8 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ai-features.css">
+    <link rel="stylesheet" href="settings.css">
     <link rel="stylesheet" href="merchandise.css">
 
     <!-- Meta tag to refresh the page every 300 seconds -->
@@ -74,6 +76,9 @@
 
     <!-- Scripts -->
     <script src="common.js"></script>
+    <script src="script.js"></script>
+    <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
     <script src="merchandise.js"></script>
 </body>
 </html>
