--- a/merchandise.html
+++ b/merchandise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js"> <!-- Add no-js class here -->
 
 <head>
     <meta charset="UTF-8">
@@ -72,6 +72,11 @@
     <footer>
         <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
+
+    <!-- Add JavaScript to remove "no-js" class -->
+    <script>
+      document.documentElement.classList.remove('no-js');
+    </script>
 
     <script src="common.js"></script>
     <script src="script.js"></script>
