--- a/merchandise.html
+++ b/merchandise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js"> <!-- Add no-js class here -->
+<html lang="en"> <!-- Removed the "no-js" class -->
 
 <head>
     <meta charset="UTF-8">
@@ -73,16 +73,12 @@
         <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
-    <!-- Add JavaScript to remove "no-js" class -->
-    <script>
-      document.documentElement.classList.remove('no-js');
-    </script>
-
-    <script src="common.js"></script>
-    <script src="script.js"></script>
-    <script src="ai-features.js"></script>
-    <script src="settings.js"></script>
-    <script src="merchandise.js"></script>
+    <!-- JavaScript files -->
+    <script src="common.js"></script>  <!-- Includes all common logic for theme, font size, etc. -->
+    <script src="script.js"></script>  <!-- Any custom script specific to the page -->
+    <script src="ai-features.js"></script> <!-- AI-related features, if any -->
+    <script src="settings.js"></script>  <!-- Keeping settings.js as requested -->
+    <script src="merchandise.js"></script> <!-- Handling product/category logic -->
 </body>
 
 </html>
