--- a/merchandise.html
+++ b/merchandise.html
@@ -38,15 +38,20 @@
         </div>
     </header>
 
-    <!-- Category List -->
-    <ul id="category-list"></ul> <!-- This will be populated dynamically -->
+    <!-- Category Dropdown -->
+    <div class="category-dropdown">
+        <label for="categories">Categories:</label>
+        <select id="categories" name="categories">
+            <!-- Categories will be populated dynamically -->
+        </select>
+    </div>
 
     <!-- Title & Product Count -->
     <h2 id="section-title">All Products</h2>
     <p id="product-count">0 products</p>
 
     <!-- Product Grid -->
-    <div id="product-grid"></div>
+    <div id="product-grid" class="product-grid"></div>
 
     <!-- Footer Section -->
     <footer>
