--- a/status.html
+++ b/status.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Status and Groups</title>
-  <!-- Add your CSS file link here -->
+<link rel="stylesheet" href="status.css">
+  
 </head>
 <body>
 
