--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
             <i class="fab fa-threads social-icon"></i>
             <span>Threads</span>
         </a>
+        <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
+            <i class="fab fa-youtube-square"></i>
+            <span>YouTube Music</span>
+        </a>
     </div>
 </div>
 
