--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <span>Threads</span>
         </a>
         <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fab fa-youtube-square"></i>
+            <i class="fab fa-youtube-square social-icon"></i>
             <span>YouTube Music</span>
         </a>
     </div>
