--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <h2>TikTok Creator Shoutouts</h2>
                 <p id="tiktok-last-updated-timestamp"></p>
             </div>
-            <div class="tiktok-creator-grid">
+            <div class="tiktok-creator-grid"></div>
                 <!-- Cards will be dynamically generated here -->
             </div>
         </div>
