--- a/index.html
+++ b/index.html
@@ -134,14 +134,6 @@
             <i class="fab fa-threads social-icon"></i>
             <span>Threads</span>
         </a>
-        <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fab fa-youtube-square social-icon"></i>
-            <span>YouTube Music</span>
-        </a>
-        <a href="https://bsky.app/profile/busarmydude.bsky.social" class="social-button">
-            <i class="fa-brands fa-bluesky social-icon"></i>
-            <span>Bluesky</span>
-        </a>
     </div>
 </div>
 
@@ -368,6 +360,29 @@
             </div>
         </div>
 
+        <!-- AFO Journey -->
+        <div class="faq-item">
+            <button class="faq-question">
+                Tell me about your AFO journey
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>My AFO Journey Timeline:</p>
+                <ul>
+                    <li>Starting Date: January 31st, 2025 (Friday)</li>
+                    <li>Documentation Plans:
+                        <ul>
+                            <li>Daily updates</li>
+                            <li>Progress tracking</li>
+                            <li>Experience sharing</li>
+                            <li>Q&A sessions</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>Follow now to join from the beginning of this journey!</p>
+            </div>
+        </div>
+
         <!-- Gaming Specifics -->
         <div class="faq-item">
             <button class="faq-question">
@@ -423,12 +438,12 @@
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (40.6%)</li>
-                            <li>CSS (30.1%)</li>
-                            <li>HTML (29.3%)</li>
+                            <li>JavaScript (38.3%)</li>
+                            <li>CSS (24.3%)</li>
+                            <li>HTML (37.4%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: February 26th, 2025 12:01:58 PM EST</li>
+                    <li>Last Updated: January 28th, 2025 20:10:38 UTC</li>
                 </ul>
             </div>
         </div>
@@ -462,7 +477,7 @@
                     </li>
                     <li>Print Prevention:
                         <ul>
-                            <li>Print commands blocked but will work just will show a blank peice of paper (Ctrl+P, ⌘+P)</li>
+                            <li>Print commands blocked (Ctrl+P, ⌘+P)</li>
                             <li>Print Screen key disabled</li>
                             <li>Browser print function blocked</li>
                             <li>PDF conversion prevented</li>
@@ -574,13 +589,13 @@
         <p><span>Price:</span> $1,067.49</p>
         <p><span>Date Released:</span> September 20, 2024</p>
         <p><span>Date Bought:</span> November 08, 2024</p>
-        <p><span>OS Version:</span> iOS 18.4 (22E5200s)</p>
+        <p><span>OS Version:</span> iOS 18.3.1 (22D72)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 165</p>
+        <p><span>Battery Charge Cycles:</span> 159</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -594,7 +609,7 @@
         <p><span>Price:</span> $853.98</p>
         <p><span>Date Released:</span> September 22, 2023</p>
         <p><span>Date Bought:</span> May 17, 2024</p>
-        <p><span>OS Version:</span> WatchOS 11.4 (22T5212I)</p>
+        <p><span>OS Version:</span> WatchOS 11.3.1 (22S560)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 97%;"></div>
@@ -612,7 +627,7 @@
         <p><span>Price:</span> $742.29</p>
         <p><span>Date Released:</span> January 17, 2023</p>
         <p><span>Date Bought:</span> May 16, 2024</p>
-        <p><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5206s)</p>
+        <p><span>OS Version:</span> macOS Sequoia 15.3.1 (24D70)</p>
     </div>
 </div>
 
