--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
             <i class="fab fa-threads social-icon"></i>
             <span>Threads</span>
         </a>
+        <a href="https://bsky.app/profile/busarmydude.bsky.social" class="social-button">
+            <i class="fa-brands fa-bluesky social-icon"></i>
+            <span>Bluesky</span>
+        </a>
     </div>
 </div>
 
