--- a/index.html
+++ b/index.html
@@ -442,12 +442,12 @@
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (38.3%)</li>
-                            <li>CSS (24.3%)</li>
-                            <li>HTML (37.4%)</li>
+                            <li>JavaScript (41.1%)</li>
+                            <li>CSS (29.9%)</li>
+                            <li>HTML (29.0%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: January 28th, 2025 20:10:38 UTC</li>
+                    <li>Last Updated: February 26th, 2025 7:25:14 PM EST</li>
                 </ul>
             </div>
         </div>
