--- a/index.html
+++ b/index.html
@@ -593,13 +593,13 @@
         <p><span>Price:</span> $1,067.49</p>
         <p><span>Date Released:</span> September 20, 2024</p>
         <p><span>Date Bought:</span> November 08, 2024</p>
-        <p><span>OS Version:</span> iOS 18.3.1 (22D72)</p>
+        <p><span>OS Version:</span> iOS 18.4 (22E5200s)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 159</p>
+        <p><span>Battery Charge Cycles:</span> 166</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -613,7 +613,7 @@
         <p><span>Price:</span> $853.98</p>
         <p><span>Date Released:</span> September 22, 2023</p>
         <p><span>Date Bought:</span> May 17, 2024</p>
-        <p><span>OS Version:</span> WatchOS 11.3.1 (22S560)</p>
+        <p><span>OS Version:</span> WatchOS 11.4 (22T5212I)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 97%;"></div>
@@ -631,7 +631,7 @@
         <p><span>Price:</span> $742.29</p>
         <p><span>Date Released:</span> January 17, 2023</p>
         <p><span>Date Bought:</span> May 16, 2024</p>
-        <p><span>OS Version:</span> macOS Sequoia 15.3.1 (24D70)</p>
+        <p><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5206s)</p>
     </div>
 </div>
 
