--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
             <i class="fa-brands fa-bluesky social-icon"></i>
             <span>Bluesky</span>
         </a>
+        <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
+            <i class="fa-brands fa-square-youtube social-icon"></i>
+            <span>YouTube Music</span>
+        </a>
     </div>
 </div>
 
