--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to BUS ARMY DUDE'S 20TH BIRTHDAY</h2>
+            <h2>Countdown to Spring 2025!</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
                     <div id="countdown-days" class="flip-clock">
