--- a/settings.html
+++ b/settings.html
@@ -27,7 +27,7 @@
         <div class="settings-section">
             <div class="settings-header">
                 <h1>Settings</h1>
-                <span class="version">v1.12.0</span>
+                <span class="version">v1.13.0</span>
             </div>
 
             <!-- Appearance Section -->
@@ -73,6 +73,18 @@
                     </div>
                     <label for="focusOutlineToggle" class="toggle-switch" aria-label="Toggle focus outline visibility">
                         <input type="checkbox" id="focusOutlineToggle" aria-label="Disable focus outline">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
+
+                <!-- Voice Over Feature -->
+                <div class="setting-card coming-soon">
+                    <div class="setting-label">
+                        <h3 class="setting-title">Voice Over</h3>
+                        <p class="setting-description">VoiceOver provides spoken and brailled descriptions of items on the computer screen. (Coming Soon)</p>
+                    </div>
+                    <label for="voiceOverToggle" class="toggle-switch" aria-label="Toggle voice over">
+                        <input type="checkbox" id="voiceOverToggle" disabled>
                         <span class="toggle-slider"></span>
                     </label>
                 </div>
