--- a/settings.html
+++ b/settings.html
@@ -78,13 +78,13 @@
                 </div>
 
                 <!-- Voice Over Feature -->
-                <div class="setting-card coming-soon">
+                <div class="setting-card">
                     <div class="setting-label">
                         <h3 class="setting-title">Voice Over</h3>
-                        <p class="setting-description">VoiceOver provides spoken and brailled descriptions of items on the computer screen. (Coming Soon)</p>
+                        <p class="setting-description">VoiceOver provides spoken and brailled descriptions of items on the computer screen.</p>
                     </div>
                     <label for="voiceOverToggle" class="toggle-switch" aria-label="Toggle voice over">
-                        <input type="checkbox" id="voiceOverToggle" disabled>
+                        <input type="checkbox" id="voiceOverToggle">
                         <span class="toggle-slider"></span>
                     </label>
                 </div>
