--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <p><strong>Thank you for your understanding!</strong></p>
 </div>
 
-   <!-- Profile Section -->
+  <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
         <!-- Merch Button -->
@@ -88,6 +88,9 @@
         <img src="check.png" alt="Verified" class="verified">
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+
+    <!-- Portfolio Button -->
+    <button class="portfolio-button" aria-label="Portfolio" onclick="window.location.href='portfolio.html'"></button>
 </div>
         
        <!-- Social Links Section -->
